ref: Move main directories

--- a/main/cnn_classifier.ipynb
+++ b/main/cnn_classifier.ipynb
@@ -209,8 +209,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_weights('../models/cnn_weights.h5')\n",
-    "model.save('../models/cnn.h5')"
+    "model.save_weights('../weights/cnn_weights.h5')\n",
+    "model.save('../weights/cnn.h5')"
    ]
   }
  ],
