--- a/main/dnn_classifier.ipynb
+++ b/main/dnn_classifier.ipynb
@@ -382,8 +382,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_weights('../models/dnn_model_weights.h5')\n",
-    "model.save('../models/dnn_model.h5')"
+    "model.save_weights('../weights/dnn_model_weights.h5')\n",
+    "model.save('../weights/dnn_model.h5')"
    ]
   }
  ],
